# cpp-ai

./: CMakeLists.txt  README.md
include/ml/: dataset.hpp  knn.hpp  linear_regression.hpp  logistic_regression.hpp  metrics.hpp
src/: main.cpp
tests/: test_logreg.cpp  test_lr.cpp
